force-app/main/default/objects/CA_Matrix__c/CA_Matrix__c.object-meta.xml
<CustomObject>
    <description>It will store the default customer assignments with respect to a country and used in Account Point Of Contacts.</description>
    <label>CA Matrix</label>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>CA Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CA Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>