force-app/main/default/objects/CA_Matrix__c/fields/CA_Name__c.field-meta.xml
<CustomField>
    <fullName>CA_Name__c</fullName>
    <label>CA Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>